--- a/roles/tower-setup/templates/ansible.cfg.j2
+++ b/roles/tower-setup/templates/ansible.cfg.j2
@@ -1,5 +1,5 @@
 [defaults]
-#inventory=./aws_jumpbox_inventory
+inventory=./inventory
 timeout=180
 
 [privilege_escalation]
@@ -8,6 +8,4 @@ become_method=sudo
 
 [ssh_connection]
 ssh_args=" -F ./ssh.cfg -o ControlMaster=auto -o ControlPersist=180s"
-#ssh_args=" -o ControlMaster=auto -o ControlPersist=180s"
 host_key_checking=False
-
