--- a/roles/tower-template/templates/schema.yml.j2
+++ b/roles/tower-template/templates/schema.yml.j2
@@ -18,3 +18,5 @@
           - job_template: osp-cleanup-resource
         success:
         - job_template: osp-smoke-test
+          success:
+          - job_template: aws-provision
